# anyGPU

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: core.cpp  core.hpp  core_concepts.hpp  tensor.hpp
docs/: TODO.md  TODO_backlog.md  TODO_closed.md  aws_g_instance_setup.md  d1_sycl_setup.md  g4dn_instance_setup.md  svd_notes.txt
io/: safetensors_file.hpp
ops/: binary_ops.cu  mm_ops.cu  mm_ops.cuh  mm_ops.hpp  mm_ops_opt2.cu  ops.hpp  quantize_ops.cu  quantize_ops.cuh  quantize_ops.hpp  softmax_ops.cu  softmax_ops.cuh  softmax_ops.hpp  transp_ops.cu  transp_ops.cuh  transp_ops.hpp
scripts/: fused_test_cases.py  generate_all.py  mm_test_cases.py  ops_test_cases.py  sdp_test_cases.py  sf_test_cases.py  shader_compiler.bat  shader_compiler_lx.sh  tensor.py  tensor_test_cases.py
scripts/dnn_inspector/: setup.py
scripts/dnn_inspector/dnninspect/: __init__.py  constants.py  nn_module.py  tensor.py
scripts/gemma2/: fused_mlp_test.py  slide_mask_test.py
scripts/perf_reports/: plot_gemma_decoder.py
scripts/zamba2/: attention.py  mamba_block.py  mamba_chunk_scan_comb.py  mamba_config.py  mamba_layer.py  mamba_model.py  rotary.py
srcs/core/: core.cpp  core.hpp  tensor.hpp
srcs/fused/: causal_conv1d.cu  causal_conv1d.hpp
srcs/io/: dat_file.hpp  safetensors_file.cpp  safetensors_file.hpp
srcs/kernels/cuda/: binary_ops.cuh  causal_conv1d.cuh  conv_2d_f32_v1.cu  conv_ops.cuh  embedding_ops.cu  fast_mm.cuh  fast_mm_f16_v1.cu  fast_mm_f16_v2.cu  fast_mm_f16_v3.1.cu  fast_mm_f16_v3.2.cu  fast_mm_f16_v3.cu  fast_mm_f32_cb.cu  fast_mm_f32_v1.cu  fast_mm_f32_v2.1.cu  fast_mm_f32_v2.cu  fast_mm_f32_v3.cu  fast_mm_f32_v4.1.cu  fast_mm_f32_v4.2.cu  fast_mm_f32_v4.cu  flash_sdpa_fwd.cuh  flash_sdpa_fwd_f32_d256_v1.cu  math_ops.cu  math_ops.cuh  mlp_gemma2_dp_linear.cuh  mlp_gemma2_dp_linear_f32_v1.cu  mlp_gemma2_dp_linear_f32_v2.cu  mlp_gemma2_dp_linear_f32_v3.cu  mlp_gemma2_dp_linear_f32_v4.cu  mlp_gemma2_fused_upproj.cuh  mlp_gemma2_fused_upproj_f32_128.cu  mlp_gemma2_fused_upproj_f32_v1.cu  mlp_gemma2_fused_upproj_f32_v2.cu  mm_ops.cu  norm_ops.cu  norm_ops.cuh  norm_rms_f32_v1.cu  quantize_ops.cuh  sdpa_gemma2_linear.cuh  sdpa_gemma2_linear_f32_v1.cu  softmax_ops.cuh
srcs/models/gemma2/: gemma_causallm.hpp  gemma_config.hpp  gemma_decoder.hpp  gemma_kv_cache.hpp  gemma_linsoftcap.cu  gemma_linsoftcap.cuh  gemma_linsoftcap.hpp  gemma_mlp.hpp  gemma_model.hpp  gemma_sdpa.hpp  gemma_slide_mask.cu  gemma_slide_mask.cuh  gemma_slide_mask.hpp  gemma_update_mask.cu  gemma_update_mask.cuh  gemma_update_mask.hpp
srcs/models/zamba2/: zamba_attn_decoder.hpp  zamba_gated_rmsnorm.hpp  zamba_glu.cu  zamba_glu.cuh  zamba_glu.hpp  zamba_mlp.hpp  zamba_rotary.cu  zamba_rotary.cuh  zamba_rotary.hpp  zamba_sdpa.hpp
srcs/ops/: binary_ops.cu  binary_ops.cuh  binary_ops.hpp  conv_ops.hpp  embedding_ops.cu  embedding_ops.cuh  embedding_ops.hpp  math_ops.cu  math_ops.cuh  math_ops.hpp  mm_ops.cu  mm_ops.cuh  mm_ops.hpp  norm_ops.cu  norm_ops.cuh  norm_ops.hpp  ops.hpp  quantize_ops.cu  quantize_ops.cuh  quantize_ops.hpp  shape_ops.hpp  softmax_ops.cu  softmax_ops.hpp  transp_ops.cu  transp_ops.cuh  transp_ops.hpp
srcs/transformers/: attention.hpp  attention_tools.hpp  sdp.hpp
srcs/zamba2/: zamba_attn_decoder.hpp  zamba_gated_rmsnorm.hpp  zamba_glu.cu  zamba_glu.hpp  zamba_mlp.hpp  zamba_rotary.hpp  zamba_sdpa.hpp
tests/: ext_torch_tests.cpp  ext_torch_tests.hpp  ext_zamba2_tests.cpp  ext_zamba2_tests.hpp  gemma2_tests.cpp  gemma2_tests.hpp  performance.cpp  performance.hpp  test_tools.hpp  tests.cpp  tests.hpp  vk_relu_shader.comp  vk_relu_skeleton.cpp  vk_relu_skeleton.hpp  zamba2_tests.cpp  zamba2_tests.hpp
transformers/: CMakeLists.txt  add_vec.cu  add_vec.hpp  attention.hpp  attention_tools.hpp  binary_ops.cpp  binary_ops.cu  binary_ops.cuh  binary_ops.hpp  core.cpp  core.hpp  core_concepts.hpp  datatypes.cpp  datatypes.hpp  main.cpp  mm_ops.hpp  sdp.hpp  tensor.cpp  tensor.hpp  tests.cpp  tests.hpp  utils.cpp  utils.hpp
